kubernetes/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: core
---
apiVersion: v1
kind: Namespace
metadata:
  name: servers
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
