kubernetes/worker.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: chrotoscloud-worker
  namespace: core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chrotoscloud-worker
  template:
    metadata:
      labels:
        app: chrotoscloud-worker
    spec:
      volumes:
        - name: workdir
          emptyDir: {}
      containers:
        - name: worker
          image: openjdk:17-jdk
          command:
            - java
          args:
            - '-Xms1G'
            - '-Xmx1G'
            - '-jar'
            - server.jar
          workingDir: /opt/worker
          resources:
            limits:
              memory: 2G
            requests:
              memory: 1G
          volumeMounts:
            - name: workdir
              mountPath: /opt/worker
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
