kubernetes/paperGameServerTemplate.yaml
kind: Service
apiVersion: v1
metadata:
  name: paper-template
  namespace: servers
spec:
  ports:
    - name: minecraft
      protocol: TCP
      port: 25565
      targetPort: 25565
  selector:
    app: paper-template
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: paper-template
  namespace: servers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paper-template
  template:
    metadata:
      labels:
        app: paper-template
        net.chrotos.ingress.minecraft/discover: 'true'
        net.chrotos.ingress.minecraft/lobby: 'true'
        net.chrotos.chrotoscloud.gameserver/gamemode: 'lobby'
    spec:
      volumes:
        - name: workdir
          emptyDir: {}
        - name: paper-config
          configMap:
            name: paper-config
        - name: podinfo
          downwardAPI:
            items:
              - path: "labels"
                fieldRef:
                  fieldPath: metadata.labels
      containers:
        - name: paper
          image: openjdk:17-jdk
          command:
            - java
          args:
            - '-Xms4G'
            - '-Xmx4G'
            - '-jar'
            - server.jar
          workingDir: /opt/paper
          ports:
            - name: minecraft
              containerPort: 25565
              protocol: TCP
          resources:
            limits:
              cpu: 1
              memory: 4G
            requests:
              cpu: 1
              memory: 4G
          volumeMounts:
            - name: workdir
              mountPath: /opt/paper
          livenessProbe:
            tcpSocket:
              port: 25565
            initialDelaySeconds: 60
            timeoutSeconds: 1
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 25565
            initialDelaySeconds: 10
            timeoutSeconds: 1
            periodSeconds: 2
            successThreshold: 1
            failureThreshold: 10
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  serviceName: paper-template
