kubernetes/proxyService.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-service
  namespace: core
spec:
  type: ClusterIP
  selector:
    app: proxy-service
  ports:
  - port: 80
    targetPort: 80
    name: proxy-service
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: proxy-service
  namespace: core
spec:
  selector:
    matchLabels:
      app: proxy-service
  serviceName: proxy-service
  replicas: 1
  template:
    metadata:
      labels:
        app: proxy-service
    spec:
      containers:
      - name: proxy-service
        image: bitnami/nginx:latest
        resources:
          requests:
            memory: 500M
            cpu: 250m
          limits:
            memory: 1G
            cpu: 500m
        ports:
        - containerPort: 80
          name: proxy-service
        volumeMounts:
          - name:  nginx-conf
            mountPath: /opt/bitnami/nginx/conf/nginx.conf
            subPath: "nginx.conf"
            readOnly: true
      volumes:
        - name: nginx-conf
          configMap:
            name: proxy-service
