kubernetes/rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: core
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
  - port: 5672
    protocol: TCP
    targetPort: 5672
    name: amqp
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  namespace: core
spec:
  selector:
    matchLabels:
      app: rabbitmq
  serviceName: rabbitmq
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: bitnami/rabbitmq:latest
        ports:
        - containerPort: 5672
          name: rabbitmq
        resources:
          requests:
            memory: 500M
            cpu: 500m
          limits:
            memory: 1G
            cpu: 1
        readinessProbe:
          tcpSocket:
            port: 5672
          initialDelaySeconds: 10
          timeoutSeconds: 1
          periodSeconds: 2
          successThreshold: 1
          failureThreshold: 10
        livenessProbe:
          tcpSocket:
            port: 5672
          initialDelaySeconds: 60
          timeoutSeconds: 1
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 3
