kubernetes/httpRestApi.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: chrotoscloud-http-rest
  namespace: core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chrotoscloud-http-rest
  template:
    metadata:
      labels:
        app: chrotoscloud-http-rest
    spec:
      volumes:
        - name: workdir
          emptyDir: {}
      containers:
        - name: api-server
          image: openjdk:17-jdk
          command:
            - java
          args:
            - '-Xms1G'
            - '-Xmx1G'
            - '-jar'
            - server.jar
          workingDir: /opt/api
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 2G
            requests:
              memory: 1G
          volumeMounts:
            - name: workdir
              mountPath: /opt/api
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 1
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 1
            periodSeconds: 2
            successThreshold: 1
            failureThreshold: 10
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: chrotoscloud-http-rest
  namespace: core
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: chrotoscloud-http-rest
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: chrotoscloud-http-rest
  namespace: core
  labels:
    name: chrotoscloud-http-rest
spec:
  rules:
    - host: chrotoscloud.chrotos.net
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: chrotoscloud-http-rest
                port:
                  name: http
